--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <!-- navigation bar -->
       <nav class="bg-navBg">
         <div class="w-2/3 mx-auto flex justify-between items-center pt-6 pb-12">
-          <button class="btn py-3 px-8 bg-primaryColor">Blog</button>
+          <button id="blog-btn" class="btn py-3 px-8 bg-primaryColor">
+            Blog
+          </button>
           <div class="flex justify-center items-center gap-4">
             <img src="./assets/logo.png" alt="" />
             <h3 class="text-xl font-semibold text-secondary">
