--- a/index.html
+++ b/index.html
@@ -43,25 +43,29 @@
     <header class="sticky top-0 z-50">
       <!-- navigation bar -->
       <nav class="bg-navBg">
-        <div class="w-2/3 mx-auto flex justify-between items-center pt-6 pb-12">
+        <div
+          class="w-11/12 lg:w-2/3 mx-auto grid grid-cols-3 gap-8 lg:flex lg:justify-between lg:items-center pt-6 pb-12"
+        >
           <button id="blog-btn" class="btn py-3 px-8 bg-primaryColor">
             Blog
           </button>
-          <div class="flex justify-center items-center gap-4">
+          <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
-            <h3 class="text-xl font-semibold text-secondary">
+            <h3 class="lg:text-xl font-semibold text-secondary sm:text-xs">
               Donate Bangladesh
             </h3>
           </div>
-          <div class="flex items-center gap-3">
+          <div class="flex items-center gap-1 lg:gap-3">
             <img src="./assets/coin.png" alt="" />
-            <span class="text-descColor text-xl font-medium">5500</span>
+            <span id="nav-bdt" class="text-descColor text-xl font-medium"
+              >5500</span
+            >
             <span class="text-descColor text-xl font-medium">BDT</span>
           </div>
         </div>
       </nav>
     </header>
-    <main class="w-3/5 mx-auto">
+    <main class="w-11/12 lg:w-3/5 mx-auto">
       <!-- Donation and History button related section  -->
       <section class="mt-20 mb-20">
         <div class="flex gap-4 justify-center">
@@ -76,7 +80,7 @@
         <section class="mt-8 space-y-8">
           <!-- card 1 -->
           <div
-            class="grid grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
           >
             <!-- card image -->
 
@@ -89,12 +93,16 @@
             <!-- card body  -->
             <div class="">
               <div class="">
-                <button class="btn">
+                <button id="" class="btn">
                   <h1
                     class="btn flex gap-2 text-center items-center rounded-lg"
                   >
                     <img src="./assets/coin.png" alt="" />
-                    <span class="text-base text-descColor font-normal">0</span>
+                    <span
+                      id="card-bdt"
+                      class="text-base text-descColor font-normal"
+                      >0</span
+                    >
                     <span class="text-base text-descColor font-normal"
                       >BDT</span
                     >
@@ -113,11 +121,13 @@
                 the lives of those in need.
               </p>
               <input
+                id="card-one-input"
                 type="text"
                 placeholder="Write Donation Amount"
                 class="input input-bordered w-full mt-7 mb-5 py-3"
               />
               <button
+                id="first-card-donate-btn"
                 class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
               >
                 Donate now
@@ -126,7 +136,7 @@
           </div>
           <!-- card 2 -->
           <div
-            class="grid grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
           >
             <!-- card image -->
 
@@ -144,7 +154,11 @@
                     class="btn flex gap-2 text-center items-center rounded-lg"
                   >
                     <img src="./assets/coin.png" alt="" />
-                    <span class="text-base text-descColor font-normal">0</span>
+                    <span
+                      id="card-bdt-2"
+                      class="text-base text-descColor font-normal"
+                      >0</span
+                    >
                     <span class="text-base text-descColor font-normal"
                       >BDT</span
                     >
@@ -165,11 +179,13 @@
                 affected.
               </p>
               <input
+                id="card-two-input"
                 type="text"
                 placeholder="Write Donation Amount"
                 class="input input-bordered w-full mt-7 mb-5 py-3"
               />
               <button
+                id="second-card-donate-btn"
                 class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
               >
                 Donate now
@@ -178,7 +194,7 @@
           </div>
           <!-- card 3 -->
           <div
-            class="grid grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
           >
             <!-- card image -->
 
@@ -200,7 +216,11 @@
                     class="btn flex gap-2 text-center items-center rounded-lg"
                   >
                     <img src="./assets/coin.png" alt="" />
-                    <span class="text-base text-descColor font-normal">0</span>
+                    <span
+                      id="card-bdt-3"
+                      class="text-base text-descColor font-normal"
+                      >0</span
+                    >
                     <span class="text-base text-descColor font-normal"
                       >BDT</span
                     >
@@ -221,11 +241,13 @@
                 and showing solidarity with those who need it the most.
               </p>
               <input
+                id="card-three-input"
                 type="text"
                 placeholder="Write Donation Amount"
                 class="input input-bordered w-full mt-7 mb-5 py-3"
               />
               <button
+                id="third-card-donate-btn"
                 class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
               >
                 Donate now
@@ -233,107 +255,13 @@
             </div>
           </div>
           <!-- card 4 -->
-          <div
-            class="grid grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
-          >
-            <!-- card image -->
-
-            <div class="h-3/4">
-              <figure>
-                <img class="w-full m-auto" src="./assets/donate1.jpg" alt="" />
-              </figure>
-            </div>
-
-            <!-- card body  -->
-            <div class="">
-              <div class="">
-                <button class="btn">
-                  <h1
-                    class="btn flex gap-2 text-center items-center rounded-lg"
-                  >
-                    <img src="./assets/coin.png" alt="" />
-                    <span class="text-base text-descColor font-normal">0</span>
-                    <span class="text-base text-descColor font-normal"
-                      >BDT</span
-                    >
-                  </h1>
-                </button>
-              </div>
-              <h2 class="my-4 font-bold text-xl tex-secondary">
-                Donate for Flood Relief in mymensingh,Bangladesh
-              </h2>
-              <p class="text-base font-light text-descColor">
-                Many have been injured during the Quota Movement while fighting
-                for their rights. Your donation can provide vital medical care
-                and recovery support to those affected.Your donation can provide
-                vital medical care and recovery support to those affected.
-              </p>
-              <input
-                type="text"
-                placeholder="Write Donation Amount"
-                class="input input-bordered w-full mt-7 mb-5 py-3"
-              />
-              <button
-                class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
-              >
-                Donate now
-              </button>
-            </div>
-          </div>
-          <!-- card 5 -->
-          <div
-            class="grid grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
-          >
-            <!-- card image -->
-
-            <div class="h-3/4">
-              <figure>
-                <img class="w-full m-auto" src="./assets/donate2.jpg" alt="" />
-              </figure>
-            </div>
-
-            <!-- card body  -->
-            <div class="">
-              <div class="">
-                <button class="btn">
-                  <h1
-                    class="btn flex gap-2 text-center items-center rounded-lg"
-                  >
-                    <img src="./assets/coin.png" alt="" />
-                    <span class="text-base text-descColor font-normal">0</span>
-                    <span class="text-base text-descColor font-normal"
-                      >BDT</span
-                    >
-                  </h1>
-                </button>
-              </div>
-              <h2 class="my-4 font-bold text-xl tex-secondary">
-                Donate for Flood Relief in Dhaka,Bangladesh
-              </h2>
-              <p class="text-base font-light text-descColor">
-                TDuring the Quota Movement, many individuals have suffered
-                injuries while standing up for their rights. Your support can
-                provide essential medical assistance, care, and recovery support
-                to those affected. Every donation, big or small, helps heal and
-                empower these brave individuals who have fought for a better
-                future.
-              </p>
-              <input
-                type="text"
-                placeholder="Write Donation Amount"
-                class="input input-bordered w-full mt-7 mb-5 py-3"
-              />
-              <button
-                class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
-              >
-                Donate now
-              </button>
-            </div>
-          </div>
         </section>
       </section>
     </main>
     <footer class="bg-navBg py-16"></footer>
+    <script src="./js/shared.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/script2.js"></script>
+    <script src="./js/script3.js"></script>
   </body>
 </html>
