--- a/blog.html
+++ b/blog.html
@@ -48,25 +48,29 @@
     <header class="sticky top-0 z-50">
       <!-- navigation bar -->
       <nav class="bg-navBg">
-        <div class="w-2/3 mx-auto flex justify-between items-center pt-6 pb-12">
-          <button id="go-home-btn" class="btn py-3 px-8 bg-primaryColor">
+        <div
+          class="w-11/12 lg:w-2/3 mx-auto grid grid-cols-3 gap-8 lg:flex lg:justify-between items-center pt-6 pb-12"
+        >
+          <button id="blog-btn" class="btn py-3 px-8 bg-primaryColor">
             Home
           </button>
-          <div class="flex justify-center items-center gap-4">
+          <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
-            <h3 class="text-xl font-semibold text-secondary">
+            <h3 class="lg:text-xl font-semibold text-secondary sm:text-xs">
               Donate Bangladesh
             </h3>
           </div>
-          <div class="flex items-center gap-3">
+          <div class="flex items-center gap-1 lg:gap-3">
             <img src="./assets/coin.png" alt="" />
-            <span class="text-descColor text-xl font-medium">5500</span>
+            <span id="nav-bdt" class="text-descColor text-xl font-medium"
+              >5500</span
+            >
             <span class="text-descColor text-xl font-medium">BDT</span>
           </div>
         </div>
       </nav>
     </header>
-    <main class="w-3/5 mx-auto mt-20">
+    <main class="w-11/12 lg:w-3/5 mx-auto mt-20">
       <h1 class="flex items-center gap-4 mb-4">
         <p class="text-3xl font-bold text-secondary">Important FAQ</p>
         <span
@@ -75,7 +79,7 @@
         ></span>
       </h1>
       <div class="">
-        <div class="collapse collapse-arrow bg-base-200">
+        <div class="collapse collapse-arrow bg-slate-50 border-2">
           <input type="radio" name="my-accordion-2" checked="checked" />
           <div class="collapse-title text-xl font-medium">
             What is the Document Object Model (DOM)?
@@ -87,7 +91,7 @@
             </p>
           </div>
         </div>
-        <div class="collapse collapse-arrow bg-base-200">
+        <div class="collapse collapse-arrow bg-slate-50 border-2">
           <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
             How do you select an element from the DOM?
@@ -101,7 +105,7 @@
             </p>
           </div>
         </div>
-        <div class="collapse collapse-arrow bg-base-200">
+        <div class="collapse collapse-arrow bg-slate-50 border-2">
           <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
             What is event delegation in the context of the DOM, and why is it
@@ -118,7 +122,7 @@
             </p>
           </div>
         </div>
-        <div class="collapse collapse-arrow bg-base-200">
+        <div class="collapse collapse-arrow bg-slate-50 border-2">
           <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
             How do you manipulate an element's attributes and styles using the
