--- a/index.html
+++ b/index.html
@@ -67,201 +67,207 @@
     </header>
     <main class="w-11/12 lg:w-3/5 mx-auto">
       <!-- Donation and History button related section  -->
-      <section class="mt-20 mb-20">
+      <section class="mt-20">
         <div class="flex gap-4 justify-center">
-          <button class="btn text-secondary text-xl font-semibold">
+          <button
+            id="main-donation-btn"
+            class="btn text-secondary text-xl font-semibold"
+          >
             Donation
           </button>
-          <button class="btn px-8 text-descColor text-xl font-semibold">
+          <button
+            id="history-btn"
+            class="btn px-8 text-descColor text-xl font-semibold"
+          >
             History
           </button>
         </div>
         <!-- card section  -->
-        <section class="mt-8 space-y-8">
-          <!-- card 1 -->
-          <div
-            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
-          >
-            <!-- card image -->
-
-            <div class="h-3/4">
-              <figure>
-                <img class="w-full m-auto" src="./assets/noakhali.png" alt="" />
-              </figure>
-            </div>
-
-            <!-- card body  -->
-            <div class="">
-              <div class="">
-                <button id="" class="btn">
-                  <h1
-                    class="btn flex gap-2 text-center items-center rounded-lg"
-                  >
-                    <img src="./assets/coin.png" alt="" />
-                    <span
-                      id="card-bdt"
-                      class="text-base text-descColor font-normal"
-                      >0</span
-                    >
-                    <span class="text-base text-descColor font-normal"
-                      >BDT</span
-                    >
-                  </h1>
-                </button>
-              </div>
-              <h2 class="my-4 font-bold text-xl tex-secondary">
-                Donate for Flood at Noakhali, Bangladesh
-              </h2>
-              <p class="text-base font-light text-descColor">
-                The recent floods in Noakhali have caused significant damage to
-                homes infrastructure. Your donation will help provide essential
-                supplies and to those affected by this disaster. Every
-                contribution, big or small, makes difference. Please join us in
-                supporting the relief efforts and making a positive impact on
-                the lives of those in need.
-              </p>
-              <input
-                id="card-one-input"
-                type="text"
-                placeholder="Write Donation Amount"
-                class="input input-bordered w-full mt-7 mb-5 py-3"
-              />
-              <button
-                id="first-card-donate-btn"
-                class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
-              >
-                Donate now
-              </button>
-            </div>
-          </div>
-          <!-- card 2 -->
-          <div
-            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
-          >
-            <!-- card image -->
-
-            <div class="h-3/4">
-              <figure>
-                <img class="w-full m-auto" src="./assets/feni.png" alt="" />
-              </figure>
-            </div>
-
-            <!-- card body  -->
-            <div class="">
-              <div class="">
-                <button class="btn">
-                  <h1
-                    class="btn flex gap-2 text-center items-center rounded-lg"
-                  >
-                    <img src="./assets/coin.png" alt="" />
-                    <span
-                      id="card-bdt-2"
-                      class="text-base text-descColor font-normal"
-                      >0</span
-                    >
-                    <span class="text-base text-descColor font-normal"
-                      >BDT</span
-                    >
-                  </h1>
-                </button>
-              </div>
-              <h2 class="my-4 font-bold text-xl tex-secondary">
-                Donate for Flood Relief in Feni,Bangladesh
-              </h2>
-              <p class="text-base font-light text-descColor">
-                The devastating floods in Feni have left many homes and
-                infrastructures damaged. Your generous donation can help deliver
-                vital supplies and support to those in urgent need. Every
-                contribution, no matter the size, plays a crucial role in
-                helping rebuild lives and communities. Stand with us in this
-                time of need and make a meaningful impact on the lives of those
-                affected.make a meaningful impact on the lives of those
-                affected.
-              </p>
-              <input
-                id="card-two-input"
-                type="text"
-                placeholder="Write Donation Amount"
-                class="input input-bordered w-full mt-7 mb-5 py-3"
-              />
-              <button
-                id="second-card-donate-btn"
-                class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
-              >
-                Donate now
-              </button>
-            </div>
-          </div>
-          <!-- card 3 -->
-          <div
-            class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
-          >
-            <!-- card image -->
-
-            <div class="h-3/4">
-              <figure>
-                <img
-                  class="w-full m-auto"
-                  src="./assets/quota-protest.png"
-                  alt=""
-                />
-              </figure>
-            </div>
-
-            <!-- card body  -->
-            <div class="">
-              <div class="">
-                <button class="btn">
-                  <h1
-                    class="btn flex gap-2 text-center items-center rounded-lg"
-                  >
-                    <img src="./assets/coin.png" alt="" />
-                    <span
-                      id="card-bdt-3"
-                      class="text-base text-descColor font-normal"
-                      >0</span
-                    >
-                    <span class="text-base text-descColor font-normal"
-                      >BDT</span
-                    >
-                  </h1>
-                </button>
-              </div>
-              <h2 class="my-4 font-bold text-xl tex-secondary">
-                Aid for Injured in the Quota Movement
-              </h2>
-              <p class="text-base font-light text-descColor">
-                TDuring the Quota Movement, many individuals have suffered
-                injuries while standing up for their rights. Your support can
-                provide essential medical assistance, care, and recovery support
-                to those affected. Every donation, big or small, helps heal and
-                empower these brave individuals who have fought for a better
-                future. Join us in making a difference and showing solidarity
-                with those who need it the most.Join us in making a difference
-                and showing solidarity with those who need it the most.
-              </p>
-              <input
-                id="card-three-input"
-                type="text"
-                placeholder="Write Donation Amount"
-                class="input input-bordered w-full mt-7 mb-5 py-3"
-              />
-              <button
-                id="third-card-donate-btn"
-                class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
-              >
-                Donate now
-              </button>
-            </div>
-          </div>
-          <!-- card 4 -->
-        </section>
       </section>
+      <!-- card section -->
+      <section id="donation-btn section" class="mt-8 space-y-8 mb-20">
+        <!-- card 1 -->
+        <div
+          class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+        >
+          <!-- card image -->
+
+          <div class="h-3/4">
+            <figure>
+              <img class="w-full m-auto" src="./assets/noakhali.png" alt="" />
+            </figure>
+          </div>
+
+          <!-- card body  -->
+          <div class="">
+            <div class="">
+              <button id="" class="btn">
+                <h1 class="btn flex gap-2 text-center items-center rounded-lg">
+                  <img src="./assets/coin.png" alt="" />
+                  <span
+                    id="card-bdt"
+                    class="text-base text-descColor font-normal"
+                    >0</span
+                  >
+                  <span class="text-base text-descColor font-normal">BDT</span>
+                </h1>
+              </button>
+            </div>
+            <h2
+              id="first-card-header"
+              class="my-4 font-bold text-xl tex-secondary"
+            >
+              Donate for Flood at Noakhali, Bangladesh
+            </h2>
+            <p class="text-base font-light text-descColor">
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
+            </p>
+            <input
+              id="card-one-input"
+              type="text"
+              placeholder="Write Donation Amount"
+              class="input input-bordered w-full mt-7 mb-5 py-3"
+            />
+            <button
+              id="first-card-donate-btn"
+              class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
+            >
+              Donate now
+            </button>
+          </div>
+        </div>
+        <!-- card 2 -->
+        <div
+          class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+        >
+          <!-- card image -->
+
+          <div class="h-3/4">
+            <figure>
+              <img class="w-full m-auto" src="./assets/feni.png" alt="" />
+            </figure>
+          </div>
+
+          <!-- card body  -->
+          <div class="">
+            <div class="">
+              <button class="btn">
+                <h1 class="btn flex gap-2 text-center items-center rounded-lg">
+                  <img src="./assets/coin.png" alt="" />
+                  <span
+                    id="card-bdt-2"
+                    class="text-base text-descColor font-normal"
+                    >0</span
+                  >
+                  <span class="text-base text-descColor font-normal">BDT</span>
+                </h1>
+              </button>
+            </div>
+            <h2
+              id="second-card-header"
+              class="my-4 font-bold text-xl tex-secondary"
+            >
+              Donate for Flood Relief in Feni,Bangladesh
+            </h2>
+            <p class="text-base font-light text-descColor">
+              The devastating floods in Feni have left many homes and
+              infrastructures damaged. Your generous donation can help deliver
+              vital supplies and support to those in urgent need. Every
+              contribution, no matter the size, plays a crucial role in helping
+              rebuild lives and communities. Stand with us in this time of need
+              and make a meaningful impact on the lives of those affected.make a
+              meaningful impact on the lives of those affected.
+            </p>
+            <input
+              id="card-two-input"
+              type="text"
+              placeholder="Write Donation Amount"
+              class="input input-bordered w-full mt-7 mb-5 py-3"
+            />
+            <button
+              id="second-card-donate-btn"
+              class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
+            >
+              Donate now
+            </button>
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div
+          class="grid sm:grid-cols-1 lg:grid-cols-2 gap-8 mx-auto p-8 bg-base-100 border rounded-2xl"
+        >
+          <!-- card image -->
+
+          <div class="h-3/4">
+            <figure>
+              <img
+                class="w-full m-auto"
+                src="./assets/quota-protest.png"
+                alt=""
+              />
+            </figure>
+          </div>
+
+          <!-- card body  -->
+          <div class="">
+            <div class="">
+              <button class="btn">
+                <h1 class="btn flex gap-2 text-center items-center rounded-lg">
+                  <img src="./assets/coin.png" alt="" />
+                  <span
+                    id="card-bdt-3"
+                    class="text-base text-descColor font-normal"
+                    >0</span
+                  >
+                  <span class="text-base text-descColor font-normal">BDT</span>
+                </h1>
+              </button>
+            </div>
+            <h2
+              id="third-card-header"
+              class="my-4 font-bold text-xl tex-secondary"
+            >
+              Aid for Injured in the Quota Movement
+            </h2>
+            <p class="text-base font-light text-descColor">
+              TDuring the Quota Movement, many individuals have suffered
+              injuries while standing up for their rights. Your support can
+              provide essential medical assistance, care, and recovery support
+              to those affected. Every donation, big or small, helps heal and
+              empower these brave individuals who have fought for a better
+              future. Join us in making a difference and showing solidarity with
+              those who need it the most.Join us in making a difference and
+              showing solidarity with those who need it the most.
+            </p>
+            <input
+              id="card-three-input"
+              type="text"
+              placeholder="Write Donation Amount"
+              class="input input-bordered w-full mt-7 mb-5 py-3"
+            />
+            <button
+              id="third-card-donate-btn"
+              class="py-4 rounded-lg bg-primaryColor w-full text-secondary text-xl font-semibold"
+            >
+              Donate now
+            </button>
+          </div>
+        </div>
+        <!-- card 4 -->
+      </section>
+      <!-- History button section -->
+      <section id="history-btn-section" class="space-y-4 mb-8"></section>
     </main>
-    <footer class="bg-navBg py-16"></footer>
+    <footer class="bg-navBg py-16 hidden"></footer>
     <script src="./js/shared.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/script2.js"></script>
     <script src="./js/script3.js"></script>
+    <script src="./js/feature.js"></script>
   </body>
 </html>
