--- a/blog.html
+++ b/blog.html
@@ -144,6 +144,7 @@
         </div>
       </div>
     </main>
+    <footer class=""></footer>
     <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
