this commit for going from homepage to block page related and gg hidden related for history page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           class="w-11/12 lg:w-2/3 mx-auto grid grid-cols-3 gap-8 lg:flex lg:justify-between lg:items-center pt-6 pb-12"
         >
           <button id="blog-btn" class="btn py-3 px-8 bg-primaryColor">
-            Blog
+            <a href="http://127.0.0.1:5500/blog.html">Blog</a>
           </button>
           <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
@@ -71,7 +71,7 @@
         <div class="flex gap-4 justify-center">
           <button
             id="main-donation-btn"
-            class="btn text-secondary text-xl font-semibold"
+            class="btn text-secondary text-xl font-semibold bg-primaryColor"
           >
             Donation
           </button>
@@ -290,7 +290,7 @@
       <!-- History button section -->
       <section id="history-btn-section" class="space-y-4 mb-8 hidden"></section>
     </main>
-    <footer class="bg-navBg py-16"></footer>
+    <footer id="footer" class="bg-navBg py-16"></footer>
     <script src="./js/shared.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/script2.js"></script>
