--- a/blog.html
+++ b/blog.html
@@ -51,9 +51,7 @@
         <div
           class="w-11/12 lg:w-2/3 mx-auto grid grid-cols-3 gap-8 lg:flex lg:justify-between items-center pt-6 pb-12"
         >
-          <button id="blog-btn" class="btn py-3 px-8 bg-primaryColor">
-            Home
-          </button>
+          <button class="btn py-3 px-8 bg-primaryColor"><a href="http://127.0.0.1:5500/index.html">Home</a></button>
           <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
             <h3 class="lg:text-xl font-semibold text-secondary sm:text-xs">
@@ -146,5 +144,7 @@
     </main>
     <footer class=""></footer>
     <!-- <script src="./js/script.js"></script> -->
+    
+    </script>
   </body>
 </html>
