this commit for changes file path in blog and home button and some changes in the site by recheck

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             id="blog-btn"
             class="btn px-8 bg-primaryColor text-xl font-semibold"
           >
-            <a href="http://127.0.0.1:5500/blog.html">Blog</a>
+            <a href="blog.html">Blog</a>
           </button>
           <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
