--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
         <div
           class="w-11/12 lg:w-2/3 mx-auto  gap-8 flex justify-between items-center pt-6 pb-12"
         >
-          <button class="btn py-3 px-8 bg-primaryColor text-xl font-semibold"><a href="http://127.0.0.1:5500/index.html">Home</a></button>
+          <button class="btn  px-8 bg-primaryColor text-xl font-semibold"><a href="index.html">Home</a></button>
           <div class="flex justify-center items-center gap-2 lg:gap-4">
             <img src="./assets/logo.png" alt="" />
             <h3 class="hidden md:block lg:block lg:text-xl font-semibold text-secondary sm:text-xs">
